--- a/src/app/heroes/heroes.html
+++ b/src/app/heroes/heroes.html
@@ -19,11 +19,8 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
     @for( hero of heroes; track hero.id ) {
-        <button [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
-            <span class ="badge">{{hero.id}}</span>
-            <span class="name"> {{hero.name}}</span>
-        </button>
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
     }
 </ul>
-
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
