--- a/src/app/heroes/heroes.html
+++ b/src/app/heroes/heroes.html
@@ -18,7 +18,7 @@
 -->
 <h2>My Heroes</h2>
 <ul class="heroes">
-    @for( hero of heroes; track hero.id ) {
+    @for( hero of heroes; track hero) {
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
